# servico-auth-unica

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  worker.py
.github/workflows/: ci.yml
api/handlers/: admin_handler.py  application_handler.py  auth_handler.py  image_handler.py  integration_handler.py  ms_handler.py  oauth_handler.py  user_handler.py
api/middlewares/: auth_mw.py  correlation_id_mw.py
api/tests/: conftest.py  test_admin_flow.py  test_api.py
core/config/: .env.sample  settings.py
core/helpers/: app_log_helper.py  authentication_helper.py  context_helper.py  datetime_helper.py  dotenv_helper.py  exceptions_helper.py  file_log_helper.py  logger_helper.py  sql_helper.py
core/infrastructure/: database_manager.py  integration_adapters.py  mariadb_adapter.py  microsoft_auth_adapter.py  sqls_adapter.py
core/models/: application_models.py  branche_models.py  integration_models.py  job_models.py  oauth_models.py  token_models.py  unit_models.py  user_models.py
core/ports/: infrastructure.py  repository.py  service.py
core/repositories/: application_repository.py  token_repository.py  user_repository.py
core/services/: application_service.py  image_usecase.py  integration_service.py  microsoft_login_service.py  token_service.py  user_service.py
core/tests/: conftest.py  test_application_service.py  test_database_manager.py  (+5 more)
docs/: INTEGRATION.md  TESTES.md  database_schema.sql  integration_refactor_plan.md  integration_service_flow.md  new_integration_flow.md
frontend/: package.json
integration/: integration_service.py  old_integration.py  tasks.py
templates/: admin_applications.html  admin_dashboard.html  admin_login.html  admin_users.html
(+23 files in other folders)
